Finished work on HTML page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<p>KORENE STUART</p>
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>Anywhere In The World</title>
+  </head>
+
+    
+      <header>
+        <h1>There Is No Town That Scares Me</h1>
+            <img src="Cleveland-night-webready.jpg" alt="Cleveland, Ohio">
+        <h5><em>by Korene Stuart</em></h5>
+      </header>
+    <article>
+      <body>
+        <main>
+          <p>Going to new places has always been an exciting thing for me.  From birth until 19, I lived in the same house in the same neighborhood and only went on vacation to Jamaica, my parent's birth place.  I longed to be a grand traveller.  I would daydream about going different places, meeting different people and doing different things.</p>
+          <p>I seriously thought I would travel the world after high school.  It never happened as I dreamed.  Money was an obstacle and I tucked my little dream of travelling the world into my past.  It was very disappointing but having my children quickly pushed that out of my mind.</p>
+         <p>I then started doing contracted work for government entities.  Every stint had required training.  These training were always out of state.  On my first trainings, I bascially stayed in the hotels and really didn't do much.  Until one day, a colleague invited me to walk with her outside of our hotel.</p>
+         <p>On that walk, we talked about so much, including my dreams of traveling.  She asked me how come I did not make the most out of my work trips. I told her I just never thought of it.  After that encounter,  I did exactly what she recommended.  I would explore every place I went.  No matter what the circumstances.  Even if I had to take public transportation.</p>
+            <img src="20180121_201445.jpg" alt="Dark Corner">
+         <p>I had a saying,  "drop me anywhere and I can find my way back home."  It never scared me to find my own way until that day in Cleveland, Ohio.  I got on the bus, coming back from the mall, following Google Maps and the bus driver tells me I am on the wrong bus.  She drops me off on a dark corner &#128546; on an unknown street and tells me to wait for the next stop and it should be there shortly.  Standing there under a very small light and thought really hard at that moment about my life's choices.  My wanting to make the most our of my travelling had led me to my demise.  It quickly got better as I saw my bus rounding the corner.  Getting on, I breathed a sigh of relief and thought about my next adventure for the next day.</p>
+      </main>     
+    </body>
+  </article>
+</html>
+<footer>
+    <p>Follow me on Instagram @theunconventionalcoder<br>
+    &copy;1978</p>
+
+</footer>
+
