Changed info on header

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Anywhere In The World</title>
   </head>
-
     
       <header>
-        <h1>There Is No Town That Scares Me</h1>
-            <img src="Cleveland-night-webready.jpg" alt="Cleveland, Ohio">
-        <h5><em>by Korene Stuart</em></h5>
+        <div id="start">
+            <h1 class="header">There Is No Town That Scares Me</h1>
+        </div>
+                <img src="Cleveland-night-webready.jpg" alt="Cleveland, Ohio">
+            <h5><em>by Korene Stuart</em></h5>
       </header>
     <article>
       <body>
@@ -24,7 +26,7 @@
   </article>
 </html>
 <footer>
-    <p>Follow me on Instagram @theunconventionalcoder<br>
+    <p>Follow me on Instagram <a href="https://www.instagram.com/theunconventionalcoder/" target="_blank">@theunconventionalcoder</a><br>
     &copy;1978</p>
 
 </footer>
